challenge06: prints seltzer to page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <!-- <script src="test/unit/note_modelSpec.js" charset="utf-8"></script> -->
     <script src="src/note-model.js" charset="utf-8"></script>
     <script src="src/note-list-model.js" charset="utf-8"></script>
+
     <!-- <script src="test/unit/assert.js" charset="utf-8"></script> -->
   </head>
   <body>
     <div id="app">
       hello
     </div>
+    <script src="src/note-list-view.js" charset="utf-8"></script>
     <script src="note-controller.js" charset="utf-8"></script>
   </body>
 </html>
