--- a/test/Spec_tester.html
+++ b/test/Spec_tester.html
@@ -5,10 +5,12 @@
     <script src="../src/note-model.js" charset="utf-8"></script>
     <script src="../src/note-list-view.js" charset="utf-8"></script>
     <script src="../src/note-list-model.js" charset="utf-8"></script>
+    <script src="../note-controller.js"></script>
     <script src="unit/assert.js" charset="utf-8"></script>
     <script src="unit/note-list-viewSpec.js" charset="utf-8"></script>
     <script src="unit/note_modelSpec.js" charset="utf-8"></script>
     <script src="unit/note_list_modelSpec.js" charset="utf-8"></script>
+    <script src="unit/note_controllerSpec.js"></script>
 
   </head>
   <body>
